--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 		<webjars.locator.version>0.30</webjars.locator.version>
 		<font-awesome.version>5.11.2</font-awesome.version>
 		<timepicker.version>1.11.14</timepicker.version>
+		<jsoup.version>1.13.1</jsoup.version>
 	</properties>
 
 	<dependencies>
@@ -100,6 +101,12 @@
 			<version>${junit.jupiter.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>${jsoup.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
