#10 fix unit and integration tests

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,5 +11,6 @@ spring:
     properties:
       hibernate:
         format_sql: false
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
   thymeleaf:
     cache: false
