--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -5,5 +5,7 @@ spring:
     username: sa
     password: sa
   jpa:
+    show-sql: false
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: create
